--- a/resources/assets/sass/materialize/components/_buttons.scss
+++ b/resources/assets/sass/materialize/components/_buttons.scss
@@ -30,8 +30,12 @@
 }
 // Shared icon styles
 .btn, .btn-floating, .btn-large, .btn-flat {
-  i {
+  i.material-icons{
     font-size: $button-font-size-shared;
+    line-height: inherit;
+  }
+  i.fa{
+    font-size: $button-font-size-shared * 0.8;
     line-height: inherit;
   }
 }
@@ -71,7 +75,7 @@
   cursor: pointer;
   vertical-align: middle;
 
-  i {
+  i.material-icons {
     width: inherit;
     display: inline-block;
     text-align: center;
@@ -79,6 +83,15 @@
     font-size: $button-large-icon-font-size;
     line-height: $button-floating-size;
   }
+  i.fa {
+    width: inherit;
+    display: inline-block;
+    text-align: center;
+    color: $button-color-raised;
+    font-size: $button-large-icon-font-size *0.8;
+    line-height: $button-floating-size;
+  }
+
 
   &:hover {
     @extend .z-depth-1-half;
@@ -146,8 +159,11 @@ button.btn-floating {
   height: $button-height * 1.5;
   line-height: 56px;
 
-  i {
+  i.material-icons {
     font-size: $button-large-icon-font-size;
+  }
+  i.fa{
+    font-size: $button-large-icon-font-size * 0.8;
   }
 }
 
