--- a/resources/assets/sass/materialize/components/_typography.scss
+++ b/resources/assets/sass/materialize/components/_typography.scss
@@ -17,12 +17,12 @@ html{
     font-size: 15px;
   }
 
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto-Thin", sans-serif;
   font-weight: normal;
   color: $off-black;
 }
 h1, h2, h3, h4, h5, h6 {
-	font-weight: 400;
+	font-weight: 100;
 	line-height: 1.1;
 }
 
